--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,176 @@
 :root {
-    --body-background-color: #2d3038;
-    --background-color: #0d181b;
-    --text-color: white;
+  --body-background-color: #2d3038;
+  --background-color: #0d181b;
+  --text-color: white;
+  --btn-color: #9b3838;
+  --btn-disabled-tag-btn-color: #742929;
+  --btn-disabled-tag-child-btn-color: #787878;
+}
+
+html,
+body {
+  margin: 0;
+  height: 100%;
+  background-color: var(--body-background-color);
+  color: var(--text-color);
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  border: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  width: 428px;
+  max-height: 421px;
+}
+
+.popover-body {
+  padding: 0;
+  color: white;
+}
+
+.popup-name-text {
+  margin-bottom: 0;
+  padding: 10px !important;
+  color: var(--text-color);
+}
+
+.popover {
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+.ol-control > button,
+.ol-control > button:hover,
+.ol-control > button:focus {
+  background-color: var(--background-color) !important;
+  color: var(--text-color);
+  font-size: 1.75rem;
+}
+
+.ol-control {
+  background-color: var(--background-color) !important;
+  color: var(--text-color);
+  margin: 10px;
+}
+
+li,
+a {
+  color: var(--text-color) !important;
+}
+
+.custom-popover {
+  --bs-popover-border-color: var(--background-color) !important;
+  --bs-popover-header-bg: var(--background-color) !important;
+  --bs-popover-header-color: var(--text-color) !important;
+  --bs-popover-arrow-border: var(--background-color) !important;
+}
+
+.card-img-header > div {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.card-img-header > img {
+  position: relative;
+}
+
+.lang-btn,
+.dropdown,
+.dropdown-menu,
+.dropdown-item:hover {
+  background-color: var(--background-color) !important;
+  color: white !important;
+  animation: fadeIn 0.2s linear;
+}
+
+.dropdown-menu.dropdown-menu-wide {
+  min-width: 100%;
+  text-align: center;
+}
+
+#lang-div {
+  position: absolute;
+  z-index: 999999;
+  top: 18px;
+  left: 80px;
+}
+
+.ol-attribution > ul > li {
+  font-size: 1rem;
+}
+.ol-attribution > ul {
+  padding: 12px;
+}
+
+.ol-attribution {
+  padding: 4px;
+}
+
+#tag-selector-btn {
+  position: absolute;
+  background-color: var(--background-color);
+  z-index: 9999;
+  top: 120px;
+  left: 18px;
+}
+
+#tag-selector {
+  display: none;
+  position: absolute;
+  background-color: var(--background-color);
+  z-index: 9999;
+  top: 190px;
+  left: 18px;
+  min-width: 170px;
+  animation: fadeIn 0.2s linear;
+  padding: 0 20px 0 20px;
+}
+
+.tag-btn,
+.tag-child-btn {
+  /*bold, uppercase, roboto*/
+  font-family: sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.tag-btn-selected, .tag-btn-selected:hover {
+  color: var(--text-color);
+  background-color: var(--btn-color);
+  border-color: var(--btn-color);
+}
+
+.tag-btn-unselected, .tag-btn-unselected:hover {
+  color: var(--btn-disabled-tag-btn-color);
+  background-color: transparent;
+  background-image: none;
+  border-color: var(--btn-disabled-tag-btn-color);
+}
+
+.tag-child-btn-selected, .tag-child-btn-selected:hover {
+  color: var(--background-color);
+  background-color: var(--text-color);
+  border-color: var(--text-color);
+}
+
+.tag-child-btn-unselected, .tag-child-btn-unselected:hover {
+  color: var(--btn-disabled-tag-child-btn-color);;
+  background-color: transparent;
+  background-image: none;
+  border-color: var(--btn-disabled-tag-child-btn-color);;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  html,
-  body {
-    margin: 0;
-    height: 100%;
-    background-color: var(--body-background-color);
-    color: var(--text-color);
+  100% {
+    opacity: 1;
   }
-  
-  .map {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .card {
-    border: 0;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    width: 428px;
-    max-height: 421px;
-  }
-  
-  .popover-body {
-    padding: 0;
-    color: white;
-  }
-  
-  .popup-name-text {
-    margin-bottom: 0;
-    padding: 10px !important;
-    color: var(--text-color);
-  }
-  
-  .popover {
-    color: var(--text-color);
-    background-color: var(--background-color);
-  }
-  
-  .ol-control > button,
-  .ol-control > button:hover,
-  .ol-control > button:focus {
-    background-color: var(--background-color) !important;
-    color: var(--text-color);
-    font-size: 1.75rem;
-  }
-  
-  .ol-control {
-    background-color: var(--background-color) !important;
-    color: var(--text-color);
-    margin: 10px;
-  }
-  
-  li,
-  a {
-    color: var(--text-color) !important;
-  }
-  
-  .custom-popover {
-    --bs-popover-border-color: var(--background-color) !important;
-    --bs-popover-header-bg: var(--background-color) !important;
-    --bs-popover-header-color: var(--text-color) !important;
-    --bs-popover-arrow-border: var(--background-color) !important;
-  }
-  
-  .card-img-header > div {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  
-  .card-img-header > img {
-    position: relative;
-  }
-  
-  button, .btn, .dropdown, .dropdown-menu, .dropdown-item:hover {
-    background-color: var(--background-color) !important;
-    color:white !important;
-  }
-  
-  .dropdown-menu.dropdown-menu-wide{
-    min-width: 100%;
-    text-align: center;
-  }
-  
-  #lang-div {
-    position: absolute;
-    z-index: 999999;
-    bottom: 18px;
-    left: 18px;
-  }
-  
-  .ol-attribution > ul > li {
-    font-size: 1rem;
-  }
-  .ol-attribution > ul{
-    padding: 12px;
-  }
+}
