--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,11 @@ body {
 li,
 a {
   color: var(--text-color) !important;
+  /*Removed underlined*/
+  text-decoration: none !important;
+}
+a:hover {
+  color: var(--btn-color) !important;
 }
 
 .custom-popover {
@@ -98,7 +103,7 @@ a {
   position: absolute;
   z-index: 999999;
   top: 18px;
-  left: 80px;
+  left: 100px;
 }
 
 .ol-attribution > ul > li {
@@ -116,7 +121,7 @@ a {
   position: absolute;
   background-color: var(--background-color);
   z-index: 9999;
-  top: 120px;
+  top: 100px;
   left: 18px;
 }
 
@@ -125,9 +130,45 @@ a {
   position: absolute;
   background-color: var(--background-color);
   z-index: 9999;
-  top: 190px;
+  top: 180px;
   left: 18px;
   min-width: 170px;
+  animation: fadeIn 0.2s linear;
+  padding: 0 20px 0 20px;
+}
+
+#back-btn {
+  position: absolute;
+  background-color: var(--background-color);
+  z-index: 9999;
+  top: 18px;
+  left: 18px;
+}
+
+
+.ol-zoom{
+  top: 10px;
+  left: auto;
+  right: 10px;
+}
+
+#attributions-btn {
+  position: absolute;
+  background-color: var(--background-color);
+  z-index: 9999;
+  bottom: 18px;
+  right: 18px;
+}
+
+#attributions-info {
+  display: none;
+  position: absolute;
+  background-color: var(--background-color);
+  z-index: 9999;
+  bottom: 100px;
+  right: 18px;
+  min-width: 20px;
+  min-height: 100px;
   animation: fadeIn 0.2s linear;
   padding: 0 20px 0 20px;
 }
