Added project logo, wiki logo and fixed vite config

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ a:hover {
   color: var(--accent-color) !important;
 }
 
+.accent-color {
+  color: var(--accent-color);
+}
+
 
 .card-img-header > div {
   position: absolute;
