--- a/css/map.css
+++ b/css/map.css
@@ -48,3 +48,14 @@
   --bs-popover-header-color: var(--text-color) !important;
   --bs-popover-arrow-border: var(--background-color) !important;
 }
+
+#map-logo {
+  position: absolute;
+  z-index: 999;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 18px;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
