--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,18 @@
 :root {
-  --body-background-color: #2d3038;
-  --background-color: #0d181b;
+  --body-background-color: #0e0e0e;
+  --background-color: #2c2c2c;
   --text-color: white;
   --accent-color: #9b3838;
-  --btn-disabled-tag-btn-color: #742929;
-  --btn-disabled-tag-child-btn-color: #787878;
+  --btn-disabled-tag-btn-color: #ff6a6a;
+  --btn-disabled-tag-child-btn-color: #b4b4b4;
 }
 
 html,
 body {
   margin: 0;
   height: 100%;
-  background-color: var(--body-background-color);
-  color: var(--text-color);
+  background-color: black;
+  color: --var(--body-background-color);
 }
 
 li,
@@ -44,7 +44,7 @@ a:hover {
     border: 0;
     background-color: var(--background-color);
     color: var(--text-color);
-    width: 428px;
+    width: 400px;
     max-height: 421px;
   }
 
