--- a/css/tags.css
+++ b/css/tags.css
@@ -13,7 +13,7 @@
   z-index: 9999;
   top: 180px;
   left: 18px;
-  min-width: 170px;
+  max-width: 650px;
   animation: fadeIn 0.2s linear;
   padding: 0 20px 0 20px;
 }
@@ -38,6 +38,7 @@
   background-color: transparent;
   background-image: none;
   border-color: var(--btn-disabled-tag-btn-color);
+  text-decoration:line-through;
 }
 
 .tag-child-btn.selected,
@@ -53,4 +54,5 @@
   background-color: transparent;
   background-image: none;
   border-color: var(--btn-disabled-tag-child-btn-color);
+  text-decoration:line-through;
 }
