Tag selector improvement and replace some icons

--- a/css/tags.css
+++ b/css/tags.css
@@ -28,7 +28,7 @@
 .tag-btn.selected,
 .tag-btn.selected:hover {
   color: var(--text-color);
-  background-color: var(--accent-color);
+  background-color:var(--body-background-color);
   border-color: var(--accent-color);
 }
 
