--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html,
 body {
   margin: 0;
   height: 100%;
-  background-color: black;
+  background-color: var(--body-background-color);
   color: --var(--body-background-color);
 }
 
