--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@
   --btn-disabled-tag-child-btn-color: #b4b4b4;
 }
 
+* {
+  font-size: 100%;
+  font-family: Montserrat;
+  font-size: 14px;
+ }
+
 html,
 body {
   margin: 0;
