--- a/css/map.css
+++ b/css/map.css
@@ -32,6 +32,8 @@
   margin-bottom: 0;
   padding: 10px !important;
   color: var(--text-color);
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .popover {
