--- a/css/tags.css
+++ b/css/tags.css
@@ -20,8 +20,7 @@
 
 .tag-btn,
 .tag-child-btn {
-  font-family: sans-serif;
-  font-size: 14px;
+  font-size: 12px !important;
   text-transform: uppercase;
 }
 
