--- a/css/map.css
+++ b/css/map.css
@@ -25,6 +25,7 @@
 
 .popover-body {
   padding: 0;
+  width: 400px;
   color: white;
 }
 
@@ -51,11 +52,8 @@
 #map-logo {
   position: absolute;
   z-index: 999;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 18px;
-  left: 0;
-  right: 0;
+  top: 20px;
+  left: 110px;;
   text-align: center;
 }
 
