--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   --background-color: #2c2c2c;
   --text-color: white;
   --accent-color: #9b3838;
-  --btn-disabled-tag-btn-color: #ff6a6a;
+  --btn-disabled-tag-btn-color: #fff;
   --btn-disabled-tag-child-btn-color: #b4b4b4;
 }
 
