--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   --background-color: #2c2c2c;
   --text-color: white;
   --accent-color: #9b3838;
+  --url-color: #c7516f;
   --btn-disabled-tag-btn-color: #fff;
   --btn-disabled-tag-child-btn-color: #b4b4b4;
 }
@@ -23,11 +24,13 @@ body {
 
 li,
 a {
-  color: var(--text-color) !important;
+  color: var(--url-color) !important;
   text-decoration: none !important;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 a:hover {
-  color: var(--accent-color) !important;
+  color: var(--url-color) !important;
+  text-decoration: underline !important;
 }
 
 .header {
