--- a/css/map.css
+++ b/css/map.css
@@ -33,6 +33,7 @@
   padding: 10px !important;
   color: var(--text-color);
   text-transform: uppercase;
+  font-weight: bold;
   font-size: 12px;
 }
 
