--- a/css/map.css
+++ b/css/map.css
@@ -56,8 +56,8 @@
 #map-logo {
   position: absolute;
   z-index: 999;
-  top: 20px;
-  left: 110px;;
+  bottom: 20px;
+  right: 100px;
   text-align: center;
 }
 
