--- a/css/attributions.css
+++ b/css/attributions.css
@@ -12,10 +12,10 @@
     background-color: var(--background-color);
     color: var(--text-color);
     z-index: 9999;
-    bottom: 95px;
+    bottom: 85px;
     right: 18px;
     min-width: 20px;
     min-height: 100px;
     animation: fadeIn 0.2s linear;
-    padding: 0 20px 0 20px;
+    padding: 25px;
   }
